# cli-coding-agent

./: .gitignore  README.md  pyproject.toml  Архитектура кодового агента следующего поколения_ DeepAgents, LSP, MCTS, память и нейро-символика.docx  Разработка автономного CLI-кодинг-агента_ проблемы и современные решения (1).docx
src/cli_agent/: __init__.py  main.py
src/cli_agent/agents/: __init__.py  agent_coder.py  mar.py  orchestrator.py  subagents.py
src/cli_agent/code_understanding/: __init__.py  code_graph.py  lsp_client.py  lsprag.py  tree_sitter_parser.py
src/cli_agent/core/: __init__.py  config.py  rlm.py  state.py
src/cli_agent/memory/: __init__.py  a_mem.py  age_mem.py  episodic.py  manager.py  simple_mem.py
src/cli_agent/observability/: __init__.py  langfuse_integration.py  loop_detection.py  metrics.py  tracing.py
src/cli_agent/planning/: __init__.py  loongflow.py  mcts.py  multi_island.py  tree_of_thoughts.py  veriplan.py
src/cli_agent/sandbox/: __init__.py  deepagents_sandbox.py  filesystem.py  worktrees.py
src/cli_agent/tools/: __init__.py  code_tools.py  file_tools.py  git_tools.py  shell_tools.py  tool_registry.py
src/cli_agent/ui/: __init__.py  displays.py  prompts.py  terminal.py
