[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-coding-agent"
version = "0.1.0"
description = "Autonomous CLI Coding Agent with RLM, SimpleMem, MCTS Planning, and Multi-Agent Architecture"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "CLI Coding Agent Team"}
]
keywords = ["ai", "coding", "agent", "llm", "autonomous", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "litellm>=1.81.0",
    "langchain>=1.2.0",
    "langgraph>=1.0.0",
    "tree-sitter>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-rust>=0.24.0",
    "tree-sitter-java>=0.23.0",
    "pydantic>=2.12.0",
    "rich>=14.2.0",
    "click>=8.3.0",
    "prompt-toolkit>=3.0.50",
    "docker>=7.1.0",
    "gitpython>=3.1.46",
    "networkx>=3.6.0",
    "numpy>=2.4.0",
    "faiss-cpu>=1.13.0",
    "sentence-transformers>=5.2.0",
    "opentelemetry-api>=1.39.0",
    "opentelemetry-sdk>=1.39.0",
    "opentelemetry-instrumentation>=0.60b0",
    "aiofiles>=25.1.0",
    "httpx>=0.28.0",
    "watchdog>=6.0.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pyyaml>=6.0.3",
    "tenacity>=9.1.0",
    "playwright>=1.57.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "ruff>=0.9.0",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
]

[project.scripts]
cli-agent = "cli_agent.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
